--- a/IndoorMapEditor.qrc
+++ b/IndoorMapEditor.qrc
@@ -10,5 +10,9 @@
         <file>src/icon/filesave.png</file>
         <file>src/icon/zoomin.png</file>
         <file>src/icon/zoomout.png</file>
+        <file>src/icon/polygon.png</file>
+        <file>src/icon/select.png</file>
+        <file>src/icon/pan.png</file>
+        <file>src/icon/pubpoint.png</file>
     </qresource>
 </RCC>
