--- a/IndoorMapEditor.qrc
+++ b/IndoorMapEditor.qrc
@@ -14,5 +14,8 @@
         <file>src/icon/select.png</file>
         <file>src/icon/pan.png</file>
         <file>src/icon/pubpoint.png</file>
+        <file>src/icon/building.png</file>
+        <file>src/icon/floor.png</file>
+        <file>src/icon/shop.png</file>
     </qresource>
 </RCC>
