1.print current view 2.webkit dlg

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>895</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -35,6 +35,7 @@
     <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
     <addaction name="separator"/>
+    <addaction name="actionPrintCurrent"/>
     <addaction name="actionPrint"/>
     <addaction name="separator"/>
    </widget>
@@ -454,6 +455,18 @@
    </property>
    <property name="toolTip">
     <string>比例尺工具</string>
+   </property>
+  </action>
+  <action name="actionPrintCurrent">
+   <property name="icon">
+    <iconset resource="IndoorMapEditor.qrc">
+     <normaloff>:/src/icon/fileprint.png</normaloff>:/src/icon/fileprint.png</iconset>
+   </property>
+   <property name="text">
+    <string>打印当前页...</string>
+   </property>
+   <property name="toolTip">
+    <string>打印当前视图</string>
    </property>
   </action>
  </widget>
